# zerotx

./: .gitignore  0001-model-drop-FCType.patch  0002-strip-ardupilot-vocab.patch  0003-audio-arm-events.patch  0004-arm-snapshot-deadline-ws.patch  0005-arm-events-drive-flight-armed.patch  0006-gui-arm-hero.patch  0007-arm-checklist-gate-daemon.patch  0008-telemetry-attitude.patch  0019-tts-piper.patch  0019b-tts-test-fixture.patch  0020-tts-debug-endpoint.patch  CHANGELOG.md  Makefile  README.md  SAFETY.md
.github/workflows/: ci.yml
configs/: iohal.example.json
docs/: ARCHITECTURE.md  BOOTSTRAP-minimal.md  BOOTSTRAP.md  CONNECTIONS.md  DECISIONS.md  OPERATIONS.md  README.md  ROADMAP.md  architecture.md  edgetx-yaml-notes.md  hardware-bom.md  hardware-pinout.md  ipc_protocol.md  operation.md
docs/architecture/: overview.md
docs/hardware/: wiring.md
docs/howto/: bench-test-sitl.md
docs/manuals/: BUILDER.md  USER.md
docs/protocols/: README.md  ipc.md  (+5 more)
geo/: README.md
rp2040/: CMakeLists.txt
rp2040/src/: crsf.c  crsf.h  input_arm.c  input_momentary.c  ipc.c  main.c  protocol.h  state.h  status_led.c  status_led.h  ws2812.pio
rp2040/tests/: test_cross.py  test_crsf_rx.c  test_ipc  test_ipc.c
rp2040/tools/: m1_bench.py
scripts/: _lib.sh  build-all.sh  build-daemon.sh  build-firmware.sh  build-manuals.sh  build-sounds.sh  build-tools.sh  build.sh  fetch-voices.sh  flash-firmware.sh  run-daemon.sh  run.sh
sounds/: .gitignore  ATTRIBUTION.md  README.md  dictionary.yml  personal.yml.example
tools/: build-geo.sh  fetch-hud-fonts.sh  run-daemon-desktop.sh
(+271 files in other folders)
